# Hackathon-Team-13

./: .gitignore  DEPLOY.md  db.py  docker-compose.yml  package.json  pyproject.toml
.claude/skills/run-hintly/: SKILL.md  bootstrap.sh  smoke.sh
.github/workflows/: ci.yml
api/: index.py
client/: .dockerignore  .env.example  Dockerfile  package.json  vite.config.ts
client/src/: routeTree.gen.ts
client/src/components/: AppHeader.tsx
client/src/lib/: api.ts
client/src/routes/: home.style.ts  home.tsx  index.style.ts  index.tsx  review.$id.style.ts  review.$id.tsx  students.$id.style.ts  students.$id.tsx  teacher.style.ts  teacher.tsx  teacherHome.style.ts  teacherHome.tsx
server/: .env.example  .gitignore  Dockerfile  docker-compose.yml  requirements.txt
server/api/: index.py
server/app/: config.py  dependencies.py  exceptions.py  main.py
server/app/ai/: llm.py  prompts.py  taxonomy.py
server/app/routers/: auth.py  student.py  teacher.py  tutor.py
server/app/schemas/: auth.py  images.py  tutor.py
server/app/services/: async_s3_service.py  auth_service.py  context_service.py  conversation_service.py  profile_service.py  teacher_service.py  tutor_ai_service.py
server/app/utils/: conversation_paths.py  files.py  (+1 more)
server/tests/: test_smoke.py
src/: routeTree.gen.ts  theme.ts
src/components/: AppHeader.style.ts  AppHeader.tsx
src/lib/: file-utils.ts
src/routes/: __root.tsx  history.style.ts  history.tsx  home.style.ts  home.tsx  index.style.ts  index.tsx  new.style.ts  new.tsx  review.$id.style.ts  review.$id.tsx
tests/: test_smoke.py
